--- a/데이터아키텍처 전문가 가이드.md
+++ b/데이터아키텍처 전문가 가이드.md
@@ -345,3 +345,14 @@
    - 논리 데이터 모델의 각 요소들을 실제적인 DBMS의 물리적은 객체로 변환하는 작업을 논리-물리 변환이라 함
    - 서브타입의 변환은 몇 가지의 형태가 존재하기 때문에 판단의 근거를 숙지하고 최적의 형태를 결정해야 함
    - 관계의 변환 시 배타적 관계의 변화넹 대해서도 몇 가지 판단의 근거를 고려해야 함
+
+#### 제4절 반정규호
+   - 반정규화: 하나의 테이블을 수직 또는 수평으로 분할하는 과정
+   - 특정 테이블에 데이터가 너무 많이 있고 레코드 중에서 특정한 범위를 주로 액세스하는 경우에는 수평분할을 고려
+   - 조회 위주의 칼럼과 갱신 위주의 칼럼이 분명히 나뉘는 경우는 수직분할 고려
+   - 반정규화는 성능과 관리 효율을 증대시키지만 데이터의 일관성 및 정합성은 위험을 내포하고 있어 충분한 검토 필요
+
+#### 제5절 물리 데이터 모델 품질 검토
+   - 물리 데이터 모델 작성 후 설계의 정확성 및 정합성 등을 평가하기 위해 사전에 데이터 모델 품질 검토 기준을 정의하고, 이에 따라 품질검토 체크리스트를 작성하여 활용 가능
+   - 물리 데이터 모델 품질검토 기준과 품질검토 체크리스트는 조직의 형편과 여건에 따라 가감하거나 변형 가능
+   - 데이터 모델 품질검토는 성능과 오류 예방이라 할 수 있음
