--- a/데이터아키텍처 전문가 가이드 - 연습문제.md
+++ b/데이터아키텍처 전문가 가이드 - 연습문제.md
@@ -18,3 +18,29 @@
  - 정보의 상호운용성과 교환 촉진
  - 정부나 기업군 또는 산업 차원의 통합된 데이터 활용
  - 데이터 중복 배제 및 재사용 증대
+
+### 제2장 데이터아키텍처 구축
+1. 데이터 환경 분석 시 수행 작업
+ - 비즈니스 내외부 환경 분석
+ - 데이터 관련 내외부 환경 분석
+ - 전사 범위 정의
+cf. 데이터 아키텍처 정보 구성 단계
+ - 데이터 아키텍처 매트릭스 정의
+2. 데이터 아키텍처 매트릭스
+ - 의사결정 유형은 정보의 상세화 정도와 연관성이 있고, 아키텍처 정보 유형은 아키텍처 관리 대상과 연관성이 있음
+ - 데이터 모델러 관점에서 다루어지는 아키텍처 정보 유형은 논리 데이터 모델
+3. 데이터 아키텍처 정보 구성 정의 시 데이터 참조모델 정의
+ - 복수의 전사를 가지고 있는 기업은 이 공정에서 참조모델을 정의하고, 개별 기업은 정의된 참조모델을 확인하는 과정으로 수행
+ - 개별 기업은 상위 기관이나 산업별 참조모델을 참고하여 아키텍처 정보 구성요소를 정의하는 것이 바람직
+ - 기업이나 조직이 보유한 데이터 중 전사적으로 참조,재활용성이 필요한 데이터를 식별하여 이를 표준화하고, 데이터 참조모델에 반영하는 프로세스를 지속적으로 수행해야 함
+4. 데이터아키텍처 정보 구축 대상
+ - 데이터베이스 개체 정보
+ - 논리 데이터 모델 정의
+ - 개념 데이터 모델 정의
+cf. 기술 아키텍처 정보 -> DBMS 제품 목록
+5. 데이터 아키텍처 수립 목적
+ - 데이터 연계 및 상호운용성 증대
+ - 데이터 품질 제고
+ - 비즈니스 변화에 대한 신속한 대응체계 구축
+ - 전사적 데이터 표준 체계 정립
+ - 마스터 데이터 기반 데이터 일관 체계 구축
