--- a/데이터아키텍처 전문가 가이드 - 연습문제.md
+++ b/데이터아키텍처 전문가 가이드 - 연습문제.md
@@ -44,3 +44,22 @@ cf. 기술 아키텍처 정보 -> DBMS 제품 목록
  - 비즈니스 변화에 대한 신속한 대응체계 구축
  - 전사적 데이터 표준 체계 정립
  - 마스터 데이터 기반 데이터 일관 체계 구축
+
+### 제3장 데이터 거버넌스
+1. 데이터 거버넌스
+ - 데이터 아키텍처를 유지 관리하기 위한 조직과 프로세스 측면의 기반을 구축
+ - 데이터 아키텍처 관리 체계
+ - 정학을 위해서는 현업 부서도 데이터아키텍처를 이해하여 활용하고 의견제시 필요
+2. 데이터 참조 모델을 적극 활용하는 것은 중요하지만, 참조모델을 유지 관리하는 것이 아키텍처 정보활용의 효과를 높이는 것은 아님
+3. 데이터아키텍처 관리 시스템 
+ - 의사소통 도구나 의사결정의 도구로 활용
+ - 데이터아키텍처 정보를 구축하고, 관리하고, 활용하는 모든 데이터아키텍처 업무 프로세스를 효과적으로 지원하기 위한 시스템
+ - 데이터아키텍처 모델링 도구, 리포지터리, 포털 등으로 구성됨
+ - 활용하여 업무와 데이터의 연관 관계 분석 및 차이 분석 수행 가능
+4. 데이터 아키텍처 모델링 도구
+ - 모든 이해관계자가 명확하게 인지할 수 있도록 데이터 구조를 표현하고 정의하는 것
+ - 데이터 아키텍처 정보가 수록된 산출물 생성 기능 제공
+ - 리포지터리를 보유하고 있어야 함
+ - 데이터 표준 변경 관리 기능 제공해야 함
+ - 데이터를 사용하는 프로세스까지 표현할 필요는 없음 
+5. 데이터거버넌스 인력에게 필요한 역량: 리더십, 기술, 활용
