--- a/데이터아키텍처 전문가 가이드 - 연습문제.md
+++ b/데이터아키텍처 전문가 가이드 - 연습문제.md
@@ -63,3 +63,22 @@ cf. 기술 아키텍처 정보 -> DBMS 제품 목록
  - 데이터 표준 변경 관리 기능 제공해야 함
  - 데이터를 사용하는 프로세스까지 표현할 필요는 없음 
 5. 데이터거버넌스 인력에게 필요한 역량: 리더십, 기술, 활용
+
+## 과목 2 데이터 요건 분석
+### 제1장 정보 요구 사항 명세
+1. 문서
+ - 정보분석서: 대상 시스템을 분석한 후 결과를 정리한 문서
+ - 정보 목록: 취합된 요구사항을 목록화한 것이나 어떤 프로그램을 목록화한 것
+ - 정보 항목 분류표: 정보 요구 사항에 포함된 항목을 분류한 것
+ - 정보 요구 사항: 업무적인 보완사항과 신규 개발사항
+2. 프로젝트 분석단계 문서 -> 사용자 및 시스템 관점의 정보 요구 사항 수집에 필요한 것 
+ - 현행 시스템 분석서
+ - 현행 사용자 요구 사항 정리 문서
+ - 현행 시스템 개선과제 및 문제점 정리 문서
+cf. 현행 업무처리 메뉴알: 세부 분석 단계에있어서 개별 업무를 정확하게 이해하기 위해서는 꼭 필요한 문서
+3. 정보 요구 사항 유형에 대한 관리기준
+ - 외부 인터페이스: 기존과 동일한 형태의 인터페이스 존재 여부
+ - 보안 개선: 불가변성(향후에 재변경되지 않도록 근본적인 개선 방안인지 여부), 실현 가능성(현행 기술 수준과 서비스 특징을 고려하여 구현 여부)
+ - 기능 개선: 많은 사용자가 편리하게 사용할 수 있는 요건의 우선 적용 여부
+ - 성능 개선: 현행 기술 수준과 서비스 특성을 고려한 구현 가능 여부, 측정가능성(측정이 불가능한 형태 판단 여부)
+4. 전체적인 영향도 분석 및 조사를 실시하기에 적합한 사람 -> 전사 관점의 데이터 아키텍처 담당자
