--- a/데이터아키텍처 전문가 가이드 - 연습문제.md
+++ b/데이터아키텍처 전문가 가이드 - 연습문제.md
@@ -154,3 +154,28 @@ cf. 인터페이스 요구 사항: 시스템인터페이스 요구사항
  - 기본 프로세스 도출
  - 정보 항목 삭제
  - 해당 업무영역으로 이동
+
+## 과목 3 데이터 표준화
+### 제1장 데이터 표준화 개요
+1. 데이터 표준화 수립 기대 효과
+ - 표준화한 명칭을 사용하여 다양한 계층 간의 명확한 의사소통 가능
+ - 각 업무 시스템 간의 데이터 인터페이스 시에 데이터 변환 및 정제 비용 감소
+ - 일관성 있는 명칭을 사용하여 시스템 운용 시간 및 개발 생산성 증가
+ - 데이터 사용자들이 필요한 데이터의 소재 파악에 소요되는 시간 및 노력이 감소
+2. 데이터 표준화 일반적 정의: 데이터 표준 요소에 대한 명칭, 정의, 형식 등을 수립하고 적용하는 것
+3. 데이터 표준화 원칙 수립 시 고려 사항
+ - 데이터 명칭은 해당 개념을 유일하게 구분해 주는 이름이어야 함
+ - 데이터 명칭은 업무적 명칭과 기술적 명칭을 별도로 사용하지 말고 업무적인 용어로 통일해야 함
+ - 데이터 명칭은 업무적 관점에서 보편적으로 인지되는 이름이어야 함
+ - 데이터 명칭은 그 이름만으로도 데이터의 의미 및 범위를 파악할 수 있어야 함
+4. 데이터 표준에 대한 전사 기본 원칙
+ - 한글명에 대해서는 반드시 하나의 영문명만 허용하도록 함
+ - 영문명(물리명) 전환 시 발음식도 허용함
+ - 한글명 및 영무명 부여 시 띄어쓰기는 허용하지 않음
+ - 영문명에 대해서는 복수 개의 한글명을 허용 함
+5. 데이터 명칭에 대한 표준화 원칙
+ - 업무적 명칭과 기술적 명칭을 구별하여 사용하지 않고, 가능하다면 의사소통이 원활한 업무적 명칭을 사용하는 것을 권장
+ - 기술적 명칭은 전산시스템을 위한 것으로 이해하고 가급적 사용하지 말아야 함
+ - 해당 개념을 유일하게 구분해 주는 이름으로 명명해야 함
+ - 업무적 관점에서 보편적으로 인지되어 이름이어야 함
+ - 이름만으로 데이터의 의미 및 범위를 파악할 수 있도록 명명해야 함
