--- a/데이터아키텍처 전문가 가이드 - 연습문제.md
+++ b/데이터아키텍처 전문가 가이드 - 연습문제.md
@@ -179,3 +179,22 @@ cf. 인터페이스 요구 사항: 시스템인터페이스 요구사항
  - 해당 개념을 유일하게 구분해 주는 이름으로 명명해야 함
  - 업무적 관점에서 보편적으로 인지되어 이름이어야 함
  - 이름만으로 데이터의 의미 및 범위를 파악할 수 있도록 명명해야 함
+
+### 제2장 데이터 표준 수립
+1. 특수 데이터 타입(CLOB, Long Raw): 데이터 조회, 잭업, 이행 등을 수행하는 데 제약사항이 많이 존재하기 때문에 표준 데이터 타입으로 적절하지 않음
+2. 표준도메인
+  - 칼럼에 동일한 형식을 부여하기 위해 사용하는 표준화
+  - 칼럼에 대한 성징을 그루핑한 개념으로 문자형, 숫자형, 일자형, 시간형으로 분류
+cf. 도메인 유형: 표준 도메인의 상위 개념, 표준 도메인의 유형을 효과적으로 분류하기 위해 정의
+3. 표준 용어
+ - 만드는 과정이나 만들어진 이후 변경 되면 파급효과가 크기 때문에 현행에서 사용하고 있는 용어들에 대한 면밀한 분석을 통해 생성해야 함
+ - 기존 업무 용어를 토대로 하여 표준 단어 사전에 등록된 관련 표준 단어의 조합으로 구성
+ - 속성과 관련된 용어일 경우에는 표준 도메인을 적용하여 데이터 형식을 부여할 수 있음
+cf. 표준코드의 코드 값은 일종의 데이터 값이기 때문에 표준용어와 상관 없음
+4. 기본 값 설정
+ - 사용자가 별도의 값을 입력하지 않은 경우에 정의된 기본 값 적용
+ - 사용자의 불편함 감소
+ - 데이터 표준화 및 품질 차원 효과
+5. 표준 단어
+ - 가장 작은 최소 단위
+cf. 표준 용어 ex. 고객 계좌번호 --(분리)--> 표준단어 ex. 고객, 계좌번호
