--- a/데이터아키텍처 전문가 가이드 - 연습문제.md
+++ b/데이터아키텍처 전문가 가이드 - 연습문제.md
@@ -198,3 +198,24 @@ cf. 표준코드의 코드 값은 일종의 데이터 값이기 때문에 표준
 5. 표준 단어
  - 가장 작은 최소 단위
 cf. 표준 용어 ex. 고객 계좌번호 --(분리)--> 표준단어 ex. 고객, 계좌번호
+
+### 데이터 표준 관리
+1. 표준 도메인
+ - 가능하면 대표성만 도메인으로 부여
+2. 영향도 분석
+ - 정의된 코드 명칭은 표준 용어가 변경됨에 따라 새로운 용어로 다시 생성되어야 하기 때문에 변경할 때는 영향도 분석에 포함되어야 함
+3. 데이터 표준 수립 후 지속적인 데이터 표준 관리를 위한 업무 프로세스
+ - 데이터 표준 변경 관리 프로세스
+ - 데이터 표준 변경에 따른 영향도 분석 프로세스
+ - 데이터 표준 준수 체크 프로세스
+cf. 데이터 표준 정의 프로세스: 데이터 표준화 추진 시에 전사적인 데이터 표준을 정의하는 작업과 관련된 일련의 프로세스
+4. 데이터 관리자 담당업무
+ - 표준 준수 여부를 체크하거나 검토함
+ - 업무 담당자에게 변경 작업 지시 후에 결과 확인
+ - 신규 및 변경 사항에 대한 업무 범위 체크
+cf. 전사 관점에서 가이드 자문 및 제시 -> 부문 데이터 관리자 역할 x 전사 데이터 관리자 역할 o
+5. 표준 관리 시스템 기능
+ - 표준 준수 검토
+ - 변경 영향 파악
+ - 표준 등록
+cf. 데이터 관리자로부터 배포된 표준에 대해서 변경 작업을 지시받은 데이터베이스 관리자는 물리데이터 모델의 변경 작업을 수행할 때 물리 db에 변경 내용 반영
