--- a/데이터아키텍처 전문가 가이드 - 연습문제.md
+++ b/데이터아키텍처 전문가 가이드 - 연습문제.md
@@ -246,3 +246,27 @@ cf. 도메인 Domain: 속성이 취할 수 있는 모든 값의 집합
  - 선택성 Optionality
 cf. 일관성 Consistency: 데이터 무결성 관련 -> 데이터 값의 정확성가 일관성을 설명할 때 사용하는 용어 -> 동일한 업무 사실을 두가지 값으로 표현해서는 안된다는 것
  ex. 남자를 M 또는 1로 두가지로 표현하는 것을 일관성이 없다고 함
+6. 관계형 모델 이론과 비관계형 모델 이론
+ - 관계형 모델 이론
+   - 데이터 중심의 분석 기법
+   - 데이터의 구조와 조작 및 무결성 정의
+   - 데이터를 집합적으로 처리를 요구
+ - 비관계형 모델 이론
+   - 일반적으로 프로세스 중심의 분석 기법
+   - 데이터의 구조와 조작을 정의
+   - 데이터의 레코드 처리(한 건씩 처리)를 요구 ]
+ex. 관계형 모델 이론이 데이터를 분석하는데 비관계형 이론보다 반드시 우수하지는 않음
+7. 관계형 모델 이론에서 무결성
+ - 개체 무결성
+ - 참조 무결성
+ - 도메인 무결성: 각 열은 동일한 성격을 갖는다
+ - 연쇄 작용 또는 업무 규칙 무결성
+8. 엔티티 무결성 규칙: 주 식별자(특정 행을 유일하게 인식하는 하나 이상의 열)는 Null 값을 포함하지 않음
+cf. 참조무결성 -> 관계, 도메인(영역) 무결성 -> 속성
+10.데이터 무결성
+ - 엔티티 무결성
+ - 연쇄 작용: 비즈니스 규칙, 어느 개체에 데이터 값이 입력, 수정, 삭제될 때 그 개체 내지는 다른 개체의 데이터 값에 영향도를 분석하는 것
+ - 참조 무결성
+ - 영역(속성) 무결성
+ - 정규화: 정규화를 잘 못하면 입력, 수정, 삭제 이상이 발생할 수 있으므로 무결성과 관련
+cf.인덱스는 데이터를 찾아가는 접근 경로로 수행 성능의 향상을 위한 기법
