--- a/데이터아키텍처 전문가 가이드 - 연습문제.md
+++ b/데이터아키텍처 전문가 가이드 - 연습문제.md
@@ -270,3 +270,33 @@ cf. 참조무결성 -> 관계, 도메인(영역) 무결성 -> 속성
  - 영역(속성) 무결성
  - 정규화: 정규화를 잘 못하면 입력, 수정, 삭제 이상이 발생할 수 있으므로 무결성과 관련
 cf.인덱스는 데이터를 찾아가는 접근 경로로 수행 성능의 향상을 위한 기법
+
+### 제2장 데이터 모델링
+1. 논리 데이터 모델링 필수 성공 요소
+ - 업무를 알고 있는 협업 사용자 참여 필수
+ - 절차 보다는 데이터에 초점을 두고 모델링 진행
+ - 데이터 구조와 무결성을 함께 고려
+cf. 데이터 모델링을 지원하는 CASE 도구의 사용은 권장사항이지만 필수 사항은 아님
+2. 주제영역 후보 도출 방법
+ - 업무에서 사용하는 데이터의 명사형 도출
+ - 업무기능의 이름으로부터 도출
+ - 업무 관리자의 의견 참조
+cf. 중요보고서 제목 -> 엔티티 후보
+3. 인조 식별자
+ - 최대한 범용적인 값 사용
+ - 유일한 값을 만들기 위해 사용
+ - 편의성, 단순성 확보를 위해 사용
+ - 내부적으로만 사용되는 인조식별자를 사용할 수도 있음 -> 특히 시스템에서 사용하는 데이터들에 이러한 유형의 식별자가 많이 존재
+4. 순환 관계 데이터 모델링
+ - 순환 관계 모델: 새로운 계층의 추가, 수정에 대해서 유연하게 대처 가능 -> 구조의 변화 필요 없이 변화에 대처 가능
+ - 순환 관계 모델에서 최상위는 의미적으로 NULL이지만 물리적인 요소(성능 등)을 고려해서 특정 값을 갖는 것이 바람직
+ - 다대다(M:M) 순환관계를 처리하기 위해서 별도의 엔티티를 추가해야 함
+ - 순환관계 모델에서 구조가 변경되더라도 식별자는 변경되지 않기 때문에 과거 데이터를 변경할 필요가 없음
+5. 엔티티 일반화 기법으로 모델링하기 적절한 경우
+ - 개체가 공통적인 속성 집합을 가지고 있을 때
+ - 개체가 공통적인 관계 집합을 가질 때
+7. 정규화 장점
+ - 데이터 중복 최소화
+ - 정보 손실 또는 뜻하지 않은 결과 도입 예방
+ - 데이터 저장 공간 최소화
+cf. 과도한 정규화는 오히려 성능 저해
