--- a/데이터아키텍처 전문가 가이드 - 연습문제.md
+++ b/데이터아키텍처 전문가 가이드 - 연습문제.md
@@ -300,3 +300,25 @@ cf. 중요보고서 제목 -> 엔티티 후보
  - 정보 손실 또는 뜻하지 않은 결과 도입 예방
  - 데이터 저장 공간 최소화
 cf. 과도한 정규화는 오히려 성능 저해
+
+### 제3장 물리 데이터 모델링
+1. 물리 데이터 모델: 논리 데이터 모델을 근간으로 구혀노딜 시스템의 물리적인 요소를 반영하여 실제 시스템에 구축될 오브젝트를 모델링하는 단계
+ - 논리 데이터 모델의 특정 데이터베이스로 설계함으로써 생성된 데이터를 저장할 수 있는 물리적인 스키마
+ - 하나의 엔티티는 물리적 요소들을 감안하여 경우에 따라서는 여러 개의 테이블로 생성될 수 있음, 특히 성능 문제를 고려하여 여러 테이블로 생성하는 경우도 종종 발생함
+ - 하나의 논리 데이터 모델은 여러 개의 물리 데이터 모델로 설계될 수 있음
+ - 논리 데이터 모델의 일부 속성만으로 물리 데이터 모델에서 테이블로 설계하는 경우도 발생할 수 있음
+2. 논리 데이터 모델의 관계 변환
+ - 일대다 관계는 논리 데이터 모델에서 가낭 흔한 관계 형태, 물리 데이터 모델에서는 M쪽 관계의 형태에 따라서 해당 칼람의 선택 사항이 결정됨
+ - 일대일 관계에 의해서 생긴 모든 외래키는 Unique Constraints를 정의할 수 있음
+ - 선분이력을 관리하는 상위 엔티티와 관계에서는 상위 엔티티의 식별자 전체를 하위엔티티에서 상속받지 않아도 데이터적인 연결을 수행할 수 있으므로 식별자 상속을 시키지 않을 수도 있음
+ - 일대일 관계에서는 Mandatory 관계를 가진 쪽에서 외래키를 생성하는 것이 바람직
+3. 논리 데이터 모델에서 배타적 관계를 물리 데이터 모델로 변환하는 방법 -> 외래키 분리방법, 외래키 결합 방법
+ - 외래키 분리 방법에서 가장 큰 단점은 새로운 관계를 추가할 때 구조가 변경되어야 하는 것
+ - 외래키는 분리 방법에서는 논리 데이터 모델의 배타적 관계를 비즈니스 규칙으로 구현하기 위해서 별도의 제약조건을 생성할 필요가 있음
+ - 외래키 결합 방법은 배타적 관계에 참여하는 관계들을 구분하기 위해서 추가적인 칼럼이 필요
+ - 외래키 겨합 방법에서는 근본적으로 외래키 제약조건을 생성할 수 없기 때문에 User Defined Trigger 방법을 통하여 해결해야 함
+4. 반정규화로 테이블이나 컬럼 중복 수행 시 권고 사항
+ - 넓은 범위를 자주 처리함으로써 수행 속도의 저하가 우려되는 경우에는 집계 테이블의 추가를 고려해볼 수 있음
+ - 자주 사용되는 액세스 조건이 다른 테이블에 분산되어 있어서 상세한 조건 부여에도 액세스 범위를 줄이지 못하는 경우에 자주 사용되는 조건들을 하나의 테이블로 모아서(칼럼의 중복 즉, 추출 속성으로 하나의 테이블에 모으는 경우를 의미함) 조건의 변별성을 극대화할 수 있음
+ - 빈번하게 조인을 일으키는 칼럼에 대해서는 중복칼럼의 생성을 고려함
+ - 계산된 값은 속성 정의에도 위배되고 함수 종속이 존재하므로 정규형이 아니지만 계산하는 비용(노력)이 많이 발생하고 빈번하다면 계산 값을 중복해서 가져갈 수 있음 
