--- a/데이터아키텍처 전문가 가이드 - 연습문제.md
+++ b/데이터아키텍처 전문가 가이드 - 연습문제.md
@@ -321,4 +321,9 @@ cf. 과도한 정규화는 오히려 성능 저해
  - 넓은 범위를 자주 처리함으로써 수행 속도의 저하가 우려되는 경우에는 집계 테이블의 추가를 고려해볼 수 있음
  - 자주 사용되는 액세스 조건이 다른 테이블에 분산되어 있어서 상세한 조건 부여에도 액세스 범위를 줄이지 못하는 경우에 자주 사용되는 조건들을 하나의 테이블로 모아서(칼럼의 중복 즉, 추출 속성으로 하나의 테이블에 모으는 경우를 의미함) 조건의 변별성을 극대화할 수 있음
  - 빈번하게 조인을 일으키는 칼럼에 대해서는 중복칼럼의 생성을 고려함
- - 계산된 값은 속성 정의에도 위배되고 함수 종속이 존재하므로 정규형이 아니지만 계산하는 비용(노력)이 많이 발생하고 빈번하다면 계산 값을 중복해서 가져갈 수 있음 
+ - 계산된 값은 속성 정의에도 위배되고 함수 종속이 존재하므로 정규형이 아니지만 계산하는 비용(노력)이 많이 발생하고 빈번하다면 계산 값을 중복해서 가져갈 수 있음
+5. 반정규화
+ - 다양한 범위를 자주 처리함으로써 수행속도 저하가 우려되는 경우 집계 테이블 추가를 고려
+ - 자주 사용되는 중복 테이블 유형으로는 집계(통계)테이블과 진행테이블이 있음
+ - 클러스터링, 결합인덱스, 고수준 SQL 등을 적절히 활용하면 집계테이블 없이도 양호한 수행속도를 얻을 수 있기 때문에 집계테이블 고려 시에 반드시 먼저 고려되어야 함
+ - M:M관계가 포함된 처리 과정을 추적, 관리하고자 하는 경우 진행 테이블 추가를 고려할 수 있으나, 다중 테이블 클러스터링이나 정확한 조인 SQL 구사 등을 통해 굳이 진행 테이블을 만들지 않아도 양호한 수행속도를 낼 수 있는 경우가 많이 있음
