--- a/데이터아키텍처 전문가 가이드 - 연습문제.md
+++ b/데이터아키텍처 전문가 가이드 - 연습문제.md
@@ -327,3 +327,19 @@ cf. 과도한 정규화는 오히려 성능 저해
  - 자주 사용되는 중복 테이블 유형으로는 집계(통계)테이블과 진행테이블이 있음
  - 클러스터링, 결합인덱스, 고수준 SQL 등을 적절히 활용하면 집계테이블 없이도 양호한 수행속도를 얻을 수 있기 때문에 집계테이블 고려 시에 반드시 먼저 고려되어야 함
  - M:M관계가 포함된 처리 과정을 추적, 관리하고자 하는 경우 진행 테이블 추가를 고려할 수 있으나, 다중 테이블 클러스터링이나 정확한 조인 SQL 구사 등을 통해 굳이 진행 테이블을 만들지 않아도 양호한 수행속도를 낼 수 있는 경우가 많이 있음
+6. 논리 데이터 모델을 물리데이터 모델로 변환하는 과정에서 서브타입을 테이블로 변환하는 방법
+ - 슈퍼 타입을 기준으로 하나의 테이블로 변환
+ - 서브타입을 기준으로 여러 개의 테이블로 변환
+ - 슈퍼타입과 서브타입 각각을 테이블로 변환
+7. 슈퍼타입을 기준으로 하나의 테이블로 변환이 유리한 경우: 전체 집합에서 임의의 집합을 추출,가공하는 경우가 빈번하고, 복잡한 처리를 하나의 쿼리로 통합하고자 하는 경우
+8. 물리 데이터 모델에서 데이터 표준을 적용하는 대상 -> 테이블, 뷰, 칼럼
+9. 테이블 수직 분할 장점
+ - 조회와 갱신 처리 중심의 칼럼들을 분할하여 레코드 잠금 현상 최소화
+ - 특별히 자주 조회되는 칼럼들을 분할하여 I/O처리 성능 향상
+ - 특정 칼럼 크기가 아주 큰 경우의 수직 분할은 I/O 성능 향상에 유리
+ - 특정 칼럼 보안을 적용하기 용이
+10. 반정규화의 일환으로 중복칼럼을 생성하는 상황
+ - 여러 개의 로우로 구성되는 값을 하나의 로우에 칼럼으로 나열하여 관리
+ - 부모 테이블에 집계 칼럼을 추가
+ - 접근 경로 단축을 위해 부모 테이블의 칼럼을 자식 테이블에 복사
+cf. 인덱스 생성은 엄밀한 의미에서 반정규화로 보지 않음
