--- a/스파크 완벽 가이드.md
+++ b/스파크 완벽 가이드.md
@@ -1,3 +1,5 @@
+
+
 # 하둡 완벽 가이드
 
 # Part 1: 빅데이터와 스파크 간단히 살펴보기
@@ -18,6 +20,22 @@
   - main함수를 실행함
   - 스파크 애플리케이션 정보의 유지 관리, 사용자 프로그램이나 입력에 대한 응답, 전반적인 익스큐터 프로세스의 작업과 관련된 분석, 배포, 스케줄링 역할
   - 스타크 애플리케이션의 수명 주기 동안 관련 정보 모두 유지
+  - 주어진 작업을 완료하기 위해 드라이버 프로그램의 명령을 익스큐터에서 실행할 책임이 있음
 - 익스큐터 프로세스
   - 드라이버 프로세스가 할당한 작업을 수행
   - 드라이버가 할당한 코드를 실행하고 진행상황을 다시 드라이버 노드에 보고하는 역할 수행
+  - 스파크 코드를 실행하는 역할
+- 클러스터 매니저
+  - 스파크 스탠드얼론 클러스터 매니저, 하둡 YARN, 메소스 중 하나 선택 가능
+  - 하나의 클러스터에서 여러 개의 스파크 애플리케이션 실행 가능
+  - 스파크는 사용가능한 자원을 파악하기 위해 클러스터 매니저를 사용
+
+### 2.2 스파크의 다양한 언어 API
+- 사용자는 스파크 코드를 실행하기 위해 SparkSession 객체를 진입점으로 사용할 수 있음
+- 파이썬이나 R로 스파크를 사용할 때는 JVM 코드를 명시적으로 작성 X
+- 스파크는 사용자를 대신해 파이썬이나 R로 작성한 코드를 익스큐터의 JVM에서 실행할 수 있는 코드로 변환함
+
+### 2.3 스파크 API
+- 다양한 언어로 스파크를 사용할 수 있는 이유는 스파크가 기본적으로 두가지 API를 제공하기 때문
+  - 저수준 비구조적 API
+  - 고수준 구조적 API
