--- a/스파크 완벽 가이드.md
+++ b/스파크 완벽 가이드.md
@@ -39,3 +39,19 @@
 - 다양한 언어로 스파크를 사용할 수 있는 이유는 스파크가 기본적으로 두가지 API를 제공하기 때문
   - 저수준 비구조적 API
   - 고수준 구조적 API
+
+### 2.5 SparkSession
+- 스파크 애플리케이션은 SparkSession이라고 불리는 드라이버 프로세스를 제어함
+- SparkSession 인스턴스
+  - 사용자가 정의한 처리 명령을 클러스터에서 실행
+  - 하나의 SparkSession은 하나의 스파크 애플리케이션에 대응
+
+### 2.6 DataFrame
+- 가장 대표적인 구조적 API
+- 스키마: 컬럼과 컬럼의 타입을 정의한 목록
+- 스파크 DataFrame은 수천 대의 컴퓨터에 분산되어 있음
+- Pandas나 R의 DataFrame에는 분산 컴퓨터가 아닌 단일 컴퓨터에 존재함 -> 데이터프레임으로 수행할 수 있는 작업이 해당 머신이 가진 자원에 따라 제한될 수 밖에 없음
+
+### 2.6.1 파티션
+- 스파크는 모든 익스큐터가 병렬로 작업을 수행할 수 있도록 파티션이라 불리는 청크 단위로 데이터를 분할함
+- 파티션: 클러스터의 물리적 머신에 존재하는 로우의 집합을 의미
