--- a/스파크 완벽 가이드.md
+++ b/스파크 완벽 가이드.md
@@ -55,3 +55,22 @@
 ### 2.6.1 파티션
 - 스파크는 모든 익스큐터가 병렬로 작업을 수행할 수 있도록 파티션이라 불리는 청크 단위로 데이터를 분할함
 - 파티션: 클러스터의 물리적 머신에 존재하는 로우의 집합을 의미
+- 데이터프레임의 파티션은 실행 중에 데이터가 컴퓨터 클러스터에서 물리적으로 분산되는 방식을 나타냄
+  - 만약 파티션이 하나라면 스파크의 수천 개의 익스큐터가 있더라도 병렬성은 1이 됨
+  - 수백 개의 파티션이 있더라도 익스큐터가 하나 밖에 없다면 병렬성은 1이됨
+- 데이터프레임을 사용하면 파티션을 수동 혹은 개별적으로 처리할 필요가 없음
+- 물리적 파티션에 데이터 변환용 함수를 지정하면 스파크가 실제 처리 방법을 결정함
+
+## 2.7 트랜스포메이션
+- 스파크 핵심 데이터 구조는 불변성 -> 한번 생성하면 변경할 수 없음
+- 데이터프레임을 변경하려면 원하는 변경 방법을 스파크에게 알려줘야 함 -> 이때 사용하는 명령을 트랜스포메이션이라고 함
+- 변수에 값을 저장하는 코드를 실행해도 결과는 출력되지 않음 -> 추상적인 트랜스포메이션만 지정한 상태이기 때문에 액션을 호출하지 않으면 스파크는 실제 트랜스포메이션을 실행하지 않음
+- 트랜스포메이션 유형
+  - 좁은 의존성
+    - 각 입력 파티션이 하나의 출력 파티션에만 영향을 미침
+    - where 구문은 좁은 의존성을 가짐 
+    - 하나의 파티션이 하나의 출력 파티션에만 영향을 미침
+    - 스파크에서 파이프라이닝을 자동으로 수행 -> 데이터프레임에 여러 필터를 지정하는 경우 모든 작업이 메모리에서 일어남
+  - 넓은 의존성
+    - 하나의 입력 파티션이 여러 출력 파티션에 영향을 미침
+    - 클러스퍼에서 파티션을 교환하는 셔플이 동작하여 셔플의 결과를 디스크에 저장함
