--- a/스파크 완벽 가이드.md
+++ b/스파크 완벽 가이드.md
@@ -73,4 +73,25 @@
     - 스파크에서 파이프라이닝을 자동으로 수행 -> 데이터프레임에 여러 필터를 지정하는 경우 모든 작업이 메모리에서 일어남
   - 넓은 의존성
     - 하나의 입력 파티션이 여러 출력 파티션에 영향을 미침
-    - 클러스퍼에서 파티션을 교환하는 셔플이 동작하여 셔플의 결과를 디스크에 저장함
+    - 클러스터에서 파티션을 교환하는 셔플이 동작하여 셔플의 결과를 디스크에 저장함
+
+### 2.7.1 지연 연산
+- 지연 연산 lazy evaluation: 스파크가 연산 그래프를 처리하기 직전까지 기다리는 동작 방식을 의미
+- 스파크는 특정 연산 명령이 내려진 즉시 데이터를 수정하지 않고 원시 데이터에 적용할 트랜스포메이션의 실행 계획을 생성함
+- 스파크는 코드를 실행하는 마지막 순간까지 대기하다가 원형 데이터프레임 트랜스포메이션을 간결한 물리적 실행 계획으로 컴파일함
+- 스파크는 이 대기 과정을 거치며 전체 데이터 흐름을 최적화하는 엄청난 강점을 가지고 있음
+- 예시: 데이터 프레임의 조건절 푸시다운 predicate pushdown
+- 아주 복잡한 스파크 잡이 원시 데이터에서 하나의 로우만 가져오는 필터를 가지고 있다면 필요한 레코드 하나만 읽는 것이 효율적 -> 스파크는 이 필터를 데이터소스로 위임하는 최적화 작업을 자동을 수행
+
+## 2.8 액션
+- 사용자는 트랜스포메이션을 사용해 논리적 실행 계획을 세울 수 있음
+- 하지만 실제 연산을 수행하려면 액션 명령을 내려야 함
+- 액션은 일련의 트랜스포메이션으로부터 결과를 계산하도록 지시하는 명령
+- 액션 유형
+  - 콘솔에서 데이터를 보내는 액션
+  - 각 언어로 된 네이티브 객체에 데이터를 모으는 액션
+  - 출력 데이터소스에 저장하는 액션
+- 액션을 지정하면 스파크 잡이 시작됨
+- 스파크 잡은 필터(좁은 트랜스포메이션)를 수행한 후 파티션별로 레코드 수를 카운트(넓은 트랜스포메이션)함
+- 그리고 각 언어에 적합한 네이티브 객체를 모음
+- 이때 스파크가 제공하는 스파크 UI로 클러스터에서 실행중인 스파크 잡을 모니터링할 수 있음
