--- a/스파크 완벽 가이드.md
+++ b/스파크 완벽 가이드.md
@@ -95,3 +95,22 @@
 - 스파크 잡은 필터(좁은 트랜스포메이션)를 수행한 후 파티션별로 레코드 수를 카운트(넓은 트랜스포메이션)함
 - 그리고 각 언어에 적합한 네이티브 객체를 모음
 - 이때 스파크가 제공하는 스파크 UI로 클러스터에서 실행중인 스파크 잡을 모니터링할 수 있음
+
+## 2.9 스파크UI
+- 스파크 잡의 진행 상황을 모니터링할 때 사용
+- 드라이버 노드의 4040 포트로 접속 가능
+- 스파크 잡 상태, 환경 설정, 클러스터 상태 등 확인
+- 스파크 잡을 튜닝하고 디버깅할 때 매우 유용
+- 스파크 잡은 개별 액션에 의해 트리거되는 다수의 트랜스포메이션으로 이루어져 있으며 스파크 UI로 잡을 모니터링할 수 있음
+
+### 2.10.1 Dataframe과 SQL
+- 스파크는 언어 상관없이 같은 방식으로 트랜스포메이션을 실행할 수 있음
+- 스파크는 SQL쿼리를 데이터프레임 코드와 같은 실행 계획으로 컴파일하므로 둘 사이의 성능의 차이가 없음
+- 스파크는 해당 데이터프레임이나 자신의 원본 데이터프레임에 액션이 호출되기 전까지 데이터를 읽지 않음
+
+# 3장 스파크 기능 둘러보기
+## 3.1 운영용 애플리케이션 실행하기
+- spark-submit 명령
+  - 대화형 셸에서 개발한 프로그램을 운영용 애플리케이션으로 쉽게 전환 가능
+  - 애플리케이션 코드를 클러스터에 전송해 실행시키는 역할
+  - 애플리케이션 실행에 필요한 자원과 실행 방식, 옵션을 지정 가능
