--- a/스파크 완벽 가이드.md
+++ b/스파크 완벽 가이드.md
@@ -114,3 +114,20 @@
   - 대화형 셸에서 개발한 프로그램을 운영용 애플리케이션으로 쉽게 전환 가능
   - 애플리케이션 코드를 클러스터에 전송해 실행시키는 역할
   - 애플리케이션 실행에 필요한 자원과 실행 방식, 옵션을 지정 가능
+  - master 옵션의 인숫값을 변경하면 스파크가 지원하는 스파크 스탠드얼론, 메소스, YARN 클러스터 매니저에서 동일한 애플리케이션 실행 가능
+
+## 3.2 Dataset: 타입 안정성을 제공하는 구조적 API
+- Dataset
+  - 자바와 스칼라의 정적 데이터 타입에 맞는 코드 -> 정적 타입 코드를 지원하기 위해 고안된 스파크의 구조적 API
+  - 타입안정성을 지원하며 동적타입 언어인 파이썬과 R에서는 사용 X
+  - 데이터프레임의 레코드를 사용자가 자바나 스칼라로 정의한 클래스에 할당하고 자바의 ArrayList 또는 스칼라의 Seq 객체 등의 고정 타입형 컬렉션으로 다룰 수 있는 기능 제공
+  - 장점
+    - 필요한 경우에 선택적으로 사용 가능
+    - 스파크가 제공하는 여러 함수를 이용해 추가 처리 작업 가능
+    - collect 메서드나 take 메서드를 호출하면 Dataset에 매개변수로 지정한 타입의 객체를 반환
+    - 코드 변경 없이 타입 안정성을 보장, 로컬이나 분산 클러스터 환경에서 데이터를 안전하게 다룰 수 있음
+
+## 3.3 구조적 스트리밍
+- 구조적 스트리밍: 스파크 2.2 버전에서 안정화된 스트림 처리용 고수준 API
+- ㄴ 사용하면 구조적 API로 개발된 배치 모드의 연산을 스트리밍 방식으로 실행 가능, 지연 시간을 줄이고 증분 처리 가능
+- 배치 처리용 코드를 일부 수정하여 스트리밍 처리를 수행하고 값을 빠르게 얻을 수 있다는 장점
