--- a/스파크 완벽 가이드.md
+++ b/스파크 완벽 가이드.md
@@ -131,3 +131,24 @@
 - 구조적 스트리밍: 스파크 2.2 버전에서 안정화된 스트림 처리용 고수준 API
 - ㄴ 사용하면 구조적 API로 개발된 배치 모드의 연산을 스트리밍 방식으로 실행 가능, 지연 시간을 줄이고 증분 처리 가능
 - 배치 처리용 코드를 일부 수정하여 스트리밍 처리를 수행하고 값을 빠르게 얻을 수 있다는 장점
+
+## 3.4 머신러닝과 고급 분석
+- 스파크에서 머신러닝 모델을 학습시키는 과정
+  1. 아직 학습되지 않은 모델 초기화 -> 학습 전 알고리즘 명칭: Algorithm
+  2. 해당 모델 학습: AlgorithmModel
+
+# 4장 구조적 API 개요
+## 4.1 DataFrame과 Dataset
+- 스파크는 DataFrame과 Dataset이라는 두 가지 구조화된 컬렉션 개념을 가지고 있음
+  - 잘 정의된 로우와 컬럼을 가지는 분산 테이블 형태의 컬렉션
+  - 각 컬럼은 다른 컬러과 동일한 수의 로우를 가져야 함
+  - 컬렉션의 모든 로우는 같은 데이터 타입 정보를 가지고 있어야 함
+  - 결과를 생성하기 위해 어떤 데이터에 어떤 연산을 적용해야 하는지 정의하는 지연 연산의 실행 계획, 불변성을 가진
+- DataFrame에 액션을 호출하면 스파크는 트랜스포메이션을 실제로 실행하고 결과를 반환함
+- 스키마는 분산 컬렉션에 저장할 데이터 타입을 정의하는 방법
+
+## 4.2 스키마
+- DataFrame의 컬럼명과 데이터 타입을 정의
+- 스키마는 데이터 소스에서 얻거나(Schema on read) 직접 정의
+- 스키마는 여러 데이터 타입으로 구성되므로 어떤 타입이 어느 위치에 있는지 정의하는 방법 필요
+- 
