--- a/스파크 완벽 가이드.md
+++ b/스파크 완벽 가이드.md
@@ -151,4 +151,18 @@
 - DataFrame의 컬럼명과 데이터 타입을 정의
 - 스키마는 데이터 소스에서 얻거나(Schema on read) 직접 정의
 - 스키마는 여러 데이터 타입으로 구성되므로 어떤 타입이 어느 위치에 있는지 정의하는 방법 필요
-- 
+
+## 4.3 스파크의 구조적 데이터 타입 개요
+- 스파크는 실행 계획 수립과 처리에 사용하는 자체 데이터 타입 정보를 가지고 있는 카탈리스트 엔진을 사용함
+  - 카탈리스트 엔진은 다양한 실행 최적화 기능을 제공
+- 스파크는 자체 데이터 타입을 지워하는 여러 언어 API와 직접 매핑되며, 각 언어에 대한 매핑 테이블을 가지고 있음
+
+### 4.3.1 Dataframe과 Dataset 비교
+- Dataframe
+  - 비타입형
+  - 스키마에 명시된 데이터 타입의 일치 여부를 런타임이 되어서 확인
+- Dataset
+  - 타입형
+  - 스키마에 명시된 데이터 타입의 일치 여부를 컴파일 타임에 확인
+  - JVM 기반의 언어인 스칼라와 자바에서만 지원
+  - 데이터 타입을 정의하려면 스칼라의 케이스 클래스나 자바 빈을 사용해야 함
