--- a/스파크 완벽 가이드.md
+++ b/스파크 완벽 가이드.md
@@ -161,8 +161,28 @@
 - Dataframe
   - 비타입형
   - 스키마에 명시된 데이터 타입의 일치 여부를 런타임이 되어서 확인
+  - Row 타입으로 구성된 Dataset
+    - Row타입은 스파크가 사용하는 연산에 최적화된 인메모리 포맷의 내부적인 표현 방식
+    - Row타입을 사용하면 가비지 컬렉션과 객체 초기화 부하가 있는 JVM 데이터 타입을 사용하는 대신 자체 데이터 포맷을 사용하기 때문에 매우 효율적인 연산 가능
+    - 파이썬이나 R에서는 스파크의 Dataset을 사용할 수 없지만 최적화된 포맷인 Dataframe 사용 가능
+  - Dataframe을 사용하면 스파크의 최적화된 내부 포맷 사용 가능 -> 내부 포맷 사용하면 스파크가 지원하는 어떤 언어 API를 사용하더라도 동일한 효과와 효율성을 얻을 수 있음
 - Dataset
   - 타입형
   - 스키마에 명시된 데이터 타입의 일치 여부를 컴파일 타임에 확인
   - JVM 기반의 언어인 스칼라와 자바에서만 지원
   - 데이터 타입을 정의하려면 스칼라의 케이스 클래스나 자바 빈을 사용해야 함
+
+### 4.3.2 컬럼
+- 컬럼은 정수형,문자열 같은 단순 데이터 타입, 배열,맵 같은 복합 데이터 타입, null 값을 표현
+
+### 4.3.3 로우
+- 로우는 데이터 레코드
+- Dataframe의 레코드는 Row타입으로 구성된
+- 로우는 SQL, RDD, 데이터소스에서 얻거나 직접 만들 수 있음 
+
+## 4.4 구조적 API의 실행 과정
+- 구조적 API 쿼리가 사용자 코드에서 실제 실행 코드로 변환되는 과정
+1. DataFrame/Dataset/SQL을 이용해 코드를 작성
+2. 정상적인 코드라면 스파크가 논리적 실행계죅으로 변환
+3. 스파크는 논리적 실행계획을 물리적 실행 계획으로 변환하며 그 과정에서 추가적인 최적화를 할 수 있는지 확인
+4. 스파크는 클러스터에서 물리적 실행 계획(RDD처리)을 실행
