--- a/스파크 완벽 가이드.md
+++ b/스파크 완벽 가이드.md
@@ -186,3 +186,23 @@
 2. 정상적인 코드라면 스파크가 논리적 실행계죅으로 변환
 3. 스파크는 논리적 실행계획을 물리적 실행 계획으로 변환하며 그 과정에서 추가적인 최적화를 할 수 있는지 확인
 4. 스파크는 클러스터에서 물리적 실행 계획(RDD처리)을 실행
+
+### 4.4.1 논리적 실행 계획
+- 추상적 트랜스포메이션만 표현
+- 드라이버나 익스큐터 정보 고려하지 않음
+- 사용자의 표현식을 최적화된 버전으로 변환 -> 사용자 코드는 검증 전 논리적 실행 계획으로 변환됨
+- 코드의 유효성과 테이블이나 컬럼의 존재여부만을 판단하는 과정이므로 아직 실행 계획을 검증하지는 않은 상태
+- 스파크 분석기는 컬럼과 테이블을 검증하기 위해 카탈로그, 모든 테이블의 저장소, Dataframe 정보 활용
+- 필요한 테이블이나 컬럼이 카탈로그에 없다면 논리적 실행계획이 만들어지지 않음
+- 테이블과 컬럼에 대한 검증 결과는 카탈리스트 옵티마이저로 전달됨
+- 카탈리스트 옵티마이저는 조건절 푸시다운이나 선택절 구문을 이용해 논리적 실행 계획을 최적화하는 규칙의 모음
+
+### 4.4.2 물리적 실행 계획
+- 스파크 실행계획 = 물리적 실행 계획
+- 논리적 실행 계획을 클러스터 환경에서 실행하는 방법을 정의
+- 물리적 실행 계획은 일련의 RDD와 트랜스포메이션으로 변환됨
+
+### 4.4.3 실행
+- 저수준 프로그래밍 인터페이스인 RDD를 대상으로 모든 코드를 실행
+- 스파크는 런타임에 전체 태스크나 스테이지를 제거할 수 있는 자바 바이트 코드를 생성해 추가적인 최적화를 수행
+- 처리결과를 사용자에게 반환
