--- a/스파크 완벽 가이드.md
+++ b/스파크 완벽 가이드.md
@@ -1,6 +1,4 @@
-
-
-# 하둡 완벽 가이드
+# 스파크 완벽 가이드
 
 # Part 1: 빅데이터와 스파크 간단히 살펴보기
 ## 1장 아파치 스파크란
@@ -16,7 +14,7 @@
 ### 2.1 스파크의 기본 아키텍처
 #### 2.1.1 스파크 애플리케이샨
 - 드라이버 프로세스
-  - 클러스터 도느 중 하나에서 실행됨
+  - 클러스터 노드 중 하나에서 실행됨
   - main함수를 실행함
   - 스파크 애플리케이션 정보의 유지 관리, 사용자 프로그램이나 입력에 대한 응답, 전반적인 익스큐터 프로세스의 작업과 관련된 분석, 배포, 스케줄링 역할
   - 스타크 애플리케이션의 수명 주기 동안 관련 정보 모두 유지
@@ -206,3 +204,25 @@
 - 저수준 프로그래밍 인터페이스인 RDD를 대상으로 모든 코드를 실행
 - 스파크는 런타임에 전체 태스크나 스테이지를 제거할 수 있는 자바 바이트 코드를 생성해 추가적인 최적화를 수행
 - 처리결과를 사용자에게 반환
+
+# 5장 구조적 API 기본 연상
+- DataFrame
+  - Row 타입의 레코드
+  - 각 레코드에 수행할 연산 표현식을 나타내는 여러 컬럼
+- 스키마
+  - 각 컬럼명과 데이터 타입 정의
+- 파티셔닝
+  - DataFrame이나 Dataset이 클러스터에서 물리적으로 배치되는 형태를 정의
+- 파티셔닝 스키마
+  - 파티션을 배치하는 방법을 정의
+  - 파티셔닝의 분할 기준은 특정 컬럼이나 비결정론적 값을 기반으로 설정할 수 있음
+
+## 5.1 스키마
+- 데이터프레임의 컬럼명과 데이터 타입 정의
+- 데이터소스에서 스키마를 얻거나 직접 정의할 수 있음
+- 여러 개의 StructField 타입으로 구성된 StructType 객체
+- StructField는 이름, 데이터 타입, 컬럼이 값이 없거나 null일 수 있는지 지정하는 불리언값을 가짐
+- 필요한 경우 컬럼과 관련된 메타데이터를 지정할 수도 있음
+- 스키마는 복합 데이터 타입인 StructType을 가질 수 있음
+- 스파크는 런타임에 데이터 타입이 스키마의 데이터 타입과 일치하지 않으면 오류를 발생시킴
+- 스파크는 자체 데이터 타입 정보를 사용하므로 프로그래밍 언어의 데이터 타입을 스파크의 데이터 타입으로 설정할 수 없음
