--- a/스파크 완벽 가이드.md
+++ b/스파크 완벽 가이드.md
@@ -226,3 +226,20 @@
 - 스키마는 복합 데이터 타입인 StructType을 가질 수 있음
 - 스파크는 런타임에 데이터 타입이 스키마의 데이터 타입과 일치하지 않으면 오류를 발생시킴
 - 스파크는 자체 데이터 타입 정보를 사용하므로 프로그래밍 언어의 데이터 타입을 스파크의 데이터 타입으로 설정할 수 없음
+ 
+## 5.2 컬럼과 표현식
+- 표현식으로 데이터프레임의 컬럼을 선택, 조작, 제거할 수 있음
+- 스파크의 컬럼은 표현식을 사용해 레코드 단위로 계산한 값을 단순하게 나타내는 논리적 구조 -> 실젯값을 얻으려면 로우가 필요하고 로우를 얻으려면 데이터프레임이 필요
+- 컬럼을 수정하려면 데이터프레임의 스파크 트랜스포메이션을 사용해야 함
+
+### 5.2.1 컬럼
+- 컬럼은 컬럼명을 카탈로그에 저장된 정보와 비교하기 전까지 미확인 상태로 남음
+- col 메서드를 사용해 명시적으로 컬럼을 정의하면 스파크는 분석기 실행 단계에서 컬럼 확인 절차를 생략
+
+### 5.2.2 표현식
+- 표현식은 데이터프레임 레코드의 여러 값에 대한 트랜스포메이션 집합을 의미
+- 여러 컬럼명을 입력으로 받아 식별하고 단일 값을 만들기 위해 다양한 표현식을 각 레코드에 적용하는 함수
+- 단일 값은 Map이나 Array 같은 복합 데이터 타입일 수도 있음
+- 표현식은 expr 함수로 사용 가능 -> expr() col() 구문은 동일하게 동작함
+- 컬럼은 단지 표현식일 뿐
+- 컬럼과 컬럼의 트랜스포메이션은 파싱된 표현식과 동일한 논리적 실행계획으로 컴파일 됨
