--- a/스파크 완벽 가이드.md
+++ b/스파크 완벽 가이드.md
@@ -243,3 +243,23 @@
 - 표현식은 expr 함수로 사용 가능 -> expr() col() 구문은 동일하게 동작함
 - 컬럼은 단지 표현식일 뿐
 - 컬럼과 컬럼의 트랜스포메이션은 파싱된 표현식과 동일한 논리적 실행계획으로 컴파일 됨
+
+## 5.3 레코드와 로우
+- 스파크에서 데이터프레임의 각 로우는 하나의 레코드
+- 스파크는 레코드를 Row 객체로 표현
+- 스파크는 값을 생성하기 위해 컬럼 표현식으로 Row 객체를 다룸
+- Row 객체는 내부에 바이트 배열을 가짐
+- 이 바이트 배열 인터페이스는 오직 컬럼 표현식으로만 다룰 수 있이므로 사용자에게 절대 노출되지 않음
+
+### 5.3.1 로우 생성하기
+- 각 컬럼에 해당하는 값을 사용해 Row 객체를 직접 생성할 수 있음
+- Row 객체는 스키마 정보가 없고 데이터프레임만 유일하게 스키마를 갖음
+- 그러므로 Row 객체를 직접 생성하려면 데이터프레임의 스키마와 같은 순서로 값을 명시해야 함
+
+## 5.4 데이터프레임의 트랜스포메이션
+- 데이터프레임을 다루는 주요 방법 -> 트랜스포메이션으로 변환 가능 
+  - 로우나 컬럼 추가
+  - 로우나 컬럼 제거
+  - 로우를 컬럼으로 변화나거나 그 반대로 변환
+  - 컬럼값을 기준으로 로우 순서 변경
+- 가장 일반적인 트랜스포메이션은 특정 컬럼 값을 변경하고 그 결과를 반환하는 것
