--- a/스파크 완벽 가이드.md
+++ b/스파크 완벽 가이드.md
@@ -263,3 +263,25 @@
   - 로우를 컬럼으로 변화나거나 그 반대로 변환
   - 컬럼값을 기준으로 로우 순서 변경
 - 가장 일반적인 트랜스포메이션은 특정 컬럼 값을 변경하고 그 결과를 반환하는 것
+
+### 5.4.1 데이터프레임 생성하기
+- 컬럼이나 표션식을 사용하는 select 
+- 문자열 표현식을 사용하는 selectExpr
+- 메서드로 사용할 수 없는 org.apache.spark.sql.functions 패키지에 포함된 다양한 함수
+
+### 5.4.2 select와 selectExpr
+- select와 selectExpr 이용하면 데이터 테이블에 SQL을 실행하는 것처럼 데이터프레임에서도 SQL 사용 가능
+- select에 expr 함수를 사용하는 패턴 -> selectExpr 
+
+### 5.4.3 스파크 데이터 타입으로 변환하기
+- 새로운 컬럼이 아닌 명시적인 값을 스파크에 전달해야 할 때 리터럴 사용
+- 리터럴은 프로그래밍언어의 리터럴 값을 스파크가 이해할 수 있는 값으로 변환
+
+### 5.4.4 컬럼 추가하기
+- 데이터프레임에 신규 컬럼을 추가하는 공식적인 방법은 withColumn 사용
+- withColumn 인수: 컬럼명, 값을 생성할 표현식
+- withColumn, expr로 컬럼명 변경 가능 
+
+### 5.4.6 예약 문자와 키워드
+- 공백이나 하이픈같은 예약 문자는 컬럼명에 사용 X
+- 예약 문자를 컬럼명에 사용하려면 백틱(`)문자를 이용해 이스케이핑해야 함
