--- a/스파크 완벽 가이드.md
+++ b/스파크 완벽 가이드.md
@@ -285,3 +285,20 @@
 ### 5.4.6 예약 문자와 키워드
 - 공백이나 하이픈같은 예약 문자는 컬럼명에 사용 X
 - 예약 문자를 컬럼명에 사용하려면 백틱(`)문자를 이용해 이스케이핑해야 함
+
+### 5.4.7 대소문자 구분
+- 기본적으로 스파크는 대소문자를 가리지 않음
+- 설정을 통해서 구분하게 만들 수 있음
+
+### 5.4.10 로우 필터링하기
+- 스파크는 자동으로 필터의 순서 상관없이 동시에 모든 필터링 작업을 수행하기 때문에 항상 유용한 것은 아님
+- 그러므로 여러개의 AND 필터를 지정하려면 차례대로 필터를 연결하고 판단은 스파크에게 맡겨야 함
+
+### 5.4.12 무작위 샘플 만들기
+- sample메서드 이용
+- 표본 데이터 추출 비율 지정 가능, 복원추출, 비복원 추출의 사용여부 지정 가능
+
+### 5.4.13 임의 분할하기
+- 임의 분할: 원본 데이터프레임을 임의의 크기로 분할할 때 사용
+- 머신러닝 알고리즘에서 학습셋, 검증셋, 테스트셋 만들 때 주로 사용
+- randomSplit 함수는 임의성을 가지도록 설계되었으므로 반드시 시드값을 설정해야 함
