--- a/스파크 완벽 가이드.md
+++ b/스파크 완벽 가이드.md
@@ -302,3 +302,26 @@
 - 임의 분할: 원본 데이터프레임을 임의의 크기로 분할할 때 사용
 - 머신러닝 알고리즘에서 학습셋, 검증셋, 테스트셋 만들 때 주로 사용
 - randomSplit 함수는 임의성을 가지도록 설계되었으므로 반드시 시드값을 설정해야 함
+
+### 5.4.14 로우 합치기와 추가하기
+- 데이터프레임은 불변성을 가짐 -> 데이터프레임에 레코드를 추가하는 작업은 데이터프레임을 변경하는 작업이기 때문에 불가능함
+- 데이터 프레임에 레코드를 추가하려면 원본 데이터프레임을 새로운 데이터프레임과 통합해야 함
+- 통합은 두 개의 데이터프레임을 단순히 결합하는 것 -> 두 개의 데이터 프레임은 반드시 동일한 스키마와 컬럼수를 가져야 함
+
+### 5.4.15 로우 정렬하기
+- sort와 orderBy는 완전히 같은 방식으로 동작(orderby 메서드 내부에서 sort 메서드 호출)
+
+### 5.4.16 로우 수 제한하기
+- limit 함수 이용
+
+### 5.4.17 repartition과 coalesce
+- 최적화 기법 중 하나는 자주 필터링하는 컬럼을 기준으로 데이터를 분할하는 것
+- 이를 통해 파티셔닝 스키마와 파티션 수를 포함해 클러스터 전반의 물리적 데이터 구성을 제어할 수 있음
+- repartition
+  - 호출하면 무조건 전체 데이터를 셔플
+  - 향후에 사용할 파티션 수가 현재 파티션 수 보다 많거나 컬럼을 기준으로 파티션을 만드는 경우에만 사욯해야 함
+  - 특정 컬럼을 기준으로 자주 필터링한다면 필터링되는 컬럼을 기준으로 파티션을 재분배하는 것이 좋음
+  - 선택적으로 파티션 수 지정 가능
+- coalesce
+  - 전체 데이터를 셔플하지 않고 파티션을 병합하려는 경우에 사용 
+  - 파티션 수를 줄이려면 셔플이 일어나는 repartition 대신 coalesce 사용해야 함
