--- a/스파크 완벽 가이드.md
+++ b/스파크 완벽 가이드.md
@@ -325,3 +325,17 @@
 - coalesce
   - 전체 데이터를 셔플하지 않고 파티션을 병합하려는 경우에 사용 
   - 파티션 수를 줄이려면 셔플이 일어나는 repartition 대신 coalesce 사용해야 함
+
+# 6장 다양한 데이터 타입 다루기
+## 6.4 수치형 데이터 타입 다루기
+- describe: 관련 컬럼에 대한 집계, 평균, 표준편차, 최솟값, 최댓값 계산
+- crosstab: 자주 사용하는 항목 쌍을 확인하는 용도의 메서드
+- monotonically_increasing_id: 모든 로우에 고유ID값 추가 -> 모든 로우에 0부터 시작하는 고윳값 생성
+
+## 6.5 문자열 데이터 타입 다루기
+- initcap: 주어진 문자열에서 공백으로 나뉘는 모든 단어의 첫 글자를 대문자로 변경
+- lpad, rpad: 문자열의 길이보다 작은 숫자를 넘기면 문자열의 오른쪽부터 제거됨
+
+### 6.5.1 정규표현식
+- instr: 값의 존재 여부 확인
+- locate: 문자열의 위치를 정수로 반환(위치는 1부터 시작)
