--- a/스파크 완벽 가이드.md
+++ b/스파크 완벽 가이드.md
@@ -339,3 +339,16 @@
 ### 6.5.1 정규표현식
 - instr: 값의 존재 여부 확인
 - locate: 문자열의 위치를 정수로 반환(위치는 1부터 시작)
+
+## 6.6 날짜와 타임스탬프 데이터 타입 다루기
+- 스파크는 두 종류의 시간 관련 정보만 집중적으로 관리
+- date: 달력형태
+- timestamp: 날짜와 시간
+- inferSchema 옵션이 활성화된 경우 날짜와 타임스탬프를 포함해 컬럼의 데이터 타입을 최대한 정확하게 식별하려 시도
+- 스파크는 특정 날짜 포맷을 명시하지 않아도 자체적으로 식별해 데이터를 읽을 수 있음
+- TimestampType 클래스는 초 단위 정밀도까지 지원
+- 밀리세컨드나 마이크로 세컨드 단위를 다룬다면 Long 데이터 타입으로 데이터 변환해 처리하는 우회정책을 사용해야 함
+- datediff: 두 날짜 사이의 일 수 반환
+- months_between: 두 날짜 사이의 개월 수 반환
+- to_date: 문자열을 날짜로 변환, 필요에 따라 날짜 포맷 지정(반드시 자바의 SimpleDateFormat 클래스)
+- 스파크는 날짜를 파싱할 수 없다면 에러 대신 null 반환
