--- a/스파크 완벽 가이드.md
+++ b/스파크 완벽 가이드.md
@@ -352,3 +352,26 @@
 - months_between: 두 날짜 사이의 개월 수 반환
 - to_date: 문자열을 날짜로 변환, 필요에 따라 날짜 포맷 지정(반드시 자바의 SimpleDateFormat 클래스)
 - 스파크는 날짜를 파싱할 수 없다면 에러 대신 null 반환
+
+## 6.7 null 값 다루기
+- 스파크에서는 빈 문자열이나 null 대체값 대신 null 값을 사용해야 최적화를 수행할 수 있음
+
+### 6.7.1 coalesce
+- coalesce 함수는 인수로 지정한 여러 컬럼 중 null이 아닌 첫번째 값을 반환
+- 모든 컬럼이 null이 아닌 값을 가지는 경우 첫 번째 컬럼의 값을 반환
+
+## 6.9 복합 데이터 타입 다루기
+- 구조체, 배열, 맵
+
+### 6.9.1 구조체
+- 데이터프레임 내부의 데이터프레임
+- 쿼리문에서 다수의 컬럼을 괄호로 묶어 구조체를 만들 수 있음
+- 구조체의 컬럼을 조회하려면 getField 함수 이용
+
+### 6.9.2 배열
+- split: 배열로 변환할때 사용, 구분자를 인수로 전달해 배열로 변환
+- explode: 복합 데이터 타입의 배열에 존재하는 모든 로우를 변환
+
+### 6.9.3 맵
+- 맵은 map함수와 컬럼의 키-값 쌍을 이용해 생성
+- 적합한 키를 사용해 데이터를 조회할 수 있고 해당 키가 없다면 null 값을 반환
