--- a/스파크 완벽 가이드.md
+++ b/스파크 완벽 가이드.md
@@ -375,3 +375,20 @@
 ### 6.9.3 맵
 - 맵은 map함수와 컬럼의 키-값 쌍을 이용해 생성
 - 적합한 키를 사용해 데이터를 조회할 수 있고 해당 키가 없다면 null 값을 반환
+
+## 6.11 사용자 정의 함수
+- 파이썬이나 스칼라, 외부 라이브러리를 사용해 사용자가 원하는 형태로 트랜스포메이션을 만들 수 있게 함
+- 하나 이상의 컬럼을 입력으로 받고, 반환할 수 있음
+- 레코드별로 데이터를 처리하는 함수이기 때문에 독특한 포맷이나 도메인에 특화된 언어를 사용하지 않음
+- 기본적으로 특정 스파크세션이나 Context에서 사용할 수 있도록 임시 함수 형태로 등록됨
+- 스칼라, 파이썬, 자바로 UDF 개발 가능
+- 언어별로 성능에 영향을 미칠 수 있으므로 주의
+- 스파크는 드라이버에서 함수를 직렬화하고 네트워크를 통해 모든 익스큐터 프로세스로 전달
+- 파이썬으로 함수를 작성했다면 매우 다르게 동작함
+  - 스파크는 워커노드에 파이썬 프로세스를 실행하고 파이썬이 이해할 수 있는 포맷으로 모든 데이터를 직렬화
+  - 파이썬 프로세스에 있는 데이터의 로우마다 함수를 실행하고 마지막으로 JVM과 스파크에 처리 결과를 반환
+  - 파이썬 프로세스를 시작하는 부하도 크지만 진짜 부하는 파이썬으로 데이터를 전달하기 위해 직렬화하는 과정에서 발생함
+    - 작렬화에 큰 부하 발생
+    - 데이터가 파이썬으로 전달되면 스파크에서 데워커 메모리를 관리할 수 없음 -> JVM과 파이썬이 동일한 머신에서 메모리 경합을 하면 자원에 제약이 생겨 워커가 비정상적으로 종료될 가능성이 있음
+- 함수에서 반환될 실제 데이터 타입와 일치하지 않는 데이터 타입을 지정하면 스파크는 오류가 아닌 null 값을 반환함
+- UDF에서 값을 선택적으러 반환하려면 파이썬을 None을 반환해야 함
