--- a/스파크 완벽 가이드.md
+++ b/스파크 완벽 가이드.md
@@ -392,3 +392,26 @@
     - 데이터가 파이썬으로 전달되면 스파크에서 데워커 메모리를 관리할 수 없음 -> JVM과 파이썬이 동일한 머신에서 메모리 경합을 하면 자원에 제약이 생겨 워커가 비정상적으로 종료될 가능성이 있음
 - 함수에서 반환될 실제 데이터 타입와 일치하지 않는 데이터 타입을 지정하면 스파크는 오류가 아닌 null 값을 반환함
 - UDF에서 값을 선택적으러 반환하려면 파이썬을 None을 반환해야 함
+
+
+# 7장 집계 연산
+## 7.1 집계 함수
+### 7.7.1 count
+- count(*)를 사용하면 null 값을 가진 로우를 포함해 카운트
+- count 함수에 특정 컬럼을 지정하면 null 값을 카운트하지 않음
+
+### 7.1.3 approx_count_distinct
+- 대규모 데이터셋을 다루다보면 정확한 고유 개수가 무의미하고 어느정도 수준의 정확도를 가지는 근사치만으로도 유의미할 때
+- 최대 추정 오류율이라는 한가지 파라미터가 있음
+  - 큰 오류율을 설정하면 기대치에서 크게 벗어나는 결과를 얻게 됨
+  - 대신 countDistinct 함수보다 더 빠르게 결과를 반환
+- 이 함수의 성능은 대규모 데이터셋을 사용할 때 훨씬 더 좋아짐
+
+### 7.1.7 sumDistinct
+- 고윳값의 합산
+
+### 7.1.9 분산과 표준편차
+- 스파크는 표본표준편차와 모표준편차 둘다 지원함
+- variance나 stddev 함수를 사용한다면 기본적으로 표본표준분산과 표본표준편차 공식 이용
+- var_pop나 stddev_pop는 모표준분산이나 모표준편차 방식 사용
+
