--- a/스파크 완벽 가이드.md
+++ b/스파크 완벽 가이드.md
@@ -415,3 +415,13 @@
 - variance나 stddev 함수를 사용한다면 기본적으로 표본표준분산과 표본표준편차 공식 이용
 - var_pop나 stddev_pop는 모표준분산이나 모표준편차 방식 사용
 
+### 7.4.1 롤업
+- 다양한 컬럼을 그룹화 키로 설정하면 그룹화 키로 설정된 조합뿐만 아니라 데이터셋에서 볼 수 있는 실제 조합을 모두 살펴볼 수 있음
+- 롤업은 그룹바이 스타일의 다양한 연산을 수행할 수 있는 다차원 집계 기능
+
+### 7.4.2 큐브
+- 큐브는 롤업을 고차원적으로 사용할 수 있게 해줌
+- 큐브는 요소들을 계층적으로 다루는 대신 모든 차원에 대해 동일한 작업을 수행함
+
+### 7.4.3 그룹화 메타데이터
+
