--- a/스파크 완벽 가이드.md
+++ b/스파크 완벽 가이드.md
@@ -424,4 +424,18 @@
 - 큐브는 요소들을 계층적으로 다루는 대신 모든 차원에 대해 동일한 작업을 수행함
 
 ### 7.4.3 그룹화 메타데이터
+- group id 사용: 큐브와 롤업을 사용하다 보면 집계 수준에 따라 쉽게 필터링하기 위해 집계 수준을 조회하는 경우 발생할 때 사용
+- ㄴ 결과 데이터셋의 집계 수준을 명시하는 컬럼을 제공
 
+### 7.4.4 피벗
+- 데이터를 탐색하는 방식에 따라 피벗을 수행한 결괏값이 감소할 수도 있음
+- 특정 컬럼의 카디널리티가 낮다면 스키마와 쿼리 대상을 확인할 수 있도록 피벗을 사용해 다수의 컬럼으로 변환하는 것이 좋음
+
+## 7.5 사용자 정의 집계 함수
+- 스파크는 입력 데이터의 모든 그룹의 중간 결과를 단일 AggregationBuffer에 저장해 관리
+- UDAF를 생성하려면 기본 클래스인 UserDefinedAggregateFunction을 상속받음
+
+# 8장 조인
+## 8.1 조인 표현식
+- 스파크는 왼쪽과 오른쪽 데이터셋에 있는 하나 이상의 키값을 비교하고 왼쪽 데이터셋과 오른쪽 데이터셋의 결합 여부를 결정하는 조인 표현식의 평가 결과에 따라 조인함
+- 가장 많이 사용되는 조인 표현식은 왼쪽과 오른쪽 데이터셋에 지정된 키가 동일한지 비교하는 동등 조인(equi-join)
