--- a/스파크 완벽 가이드.md
+++ b/스파크 완벽 가이드.md
@@ -439,3 +439,14 @@
 ## 8.1 조인 표현식
 - 스파크는 왼쪽과 오른쪽 데이터셋에 있는 하나 이상의 키값을 비교하고 왼쪽 데이터셋과 오른쪽 데이터셋의 결합 여부를 결정하는 조인 표현식의 평가 결과에 따라 조인함
 - 가장 많이 사용되는 조인 표현식은 왼쪽과 오른쪽 데이터셋에 지정된 키가 동일한지 비교하는 동등 조인(equi-join)
+- 스파크는 키가 일치하지 않으면 데이터셋을 결합하지 않음
+- 스파크는 일치하는 키가 없는 로우는 조인에 포함시키지 않음
+- 스파크는 동등 조인뿐만 아니라 더 복잡한 조인 정책도 지원
+- 복합 데이터 타입을 조인에 사용할 수 있음
+
+## 8.7 왼쪽 세미 조인
+- 세미 조인은 오른쪽 데이터프레임의 어떤 값도 포함하지 않기 때문에 다른 조인 타입과는 약간 다름
+- 두번째 데이터프레임은 값이 존재하는지 확인하기 위해 값만 비교하는 용도로 사용
+- 만약 값이 존재한다면 왼쪽 데이터프레임에 중복 키가 존재하더라도 해당 로우는 결과에 포함된
+- 왼쪽 세미 조인은 기존 조인 기능과 달리 데이터프레임의 필터 정도로 볼 수 있음
+- 
