--- a/스파크 완벽 가이드.md
+++ b/스파크 완벽 가이드.md
@@ -449,4 +449,23 @@
 - 두번째 데이터프레임은 값이 존재하는지 확인하기 위해 값만 비교하는 용도로 사용
 - 만약 값이 존재한다면 왼쪽 데이터프레임에 중복 키가 존재하더라도 해당 로우는 결과에 포함된
 - 왼쪽 세미 조인은 기존 조인 기능과 달리 데이터프레임의 필터 정도로 볼 수 있음
-- 
+
+## 8.8 왼쪽 안티 조인
+- 왼쪽 세미 조인의 반대 개념
+- 왼쪽 세미 조인처럼 오른쪽 데이터프레임의 어떤 값도 포함하지 않음
+- 단지 두번째 데이터프레임은 값이 존재하는지 확인하기 위해 값만 비교하는 용도로 사용함
+- 두번째 데이터프레임에서 관련된 키를 찾을 수 없는 로우만 결과에 포함됨
+- 안티 조인은 SQL의 NOT IN과 같은 스타일의 필터로 생각할 수 있음
+
+## 8.9 자연 조인
+- 조인하려는 컬럼을 암시적으로 추정
+- 일치하는 컬럼을 찾고 그 결과를 반환함
+
+## 8.10 교차 조인(카테시안 조인)
+- 교차조인은 조건절을 기술하지 않은 내부 조인을 의미
+- 교차조인은 왼쪽 데이터프레임의 모든 로우를 오른쪽 데이터 프레임의 모든 로우와 결합
+- 교차조인을 거치면 엄청난 수의 로우를 가질 수 있으므로 반드시 키워드를 이용해 교차 조인을 수행한다는 것을 명시적으로 선언해야 함
+
+## 8.11 조인 사용 시 문제점
+### 8.11.1 복합 데이터 타입의 조인
+- 불리언을 반환하는 모든 표현식은 조인 표현식으로 간주할 수 있음
