--- a/스파크 완벽 가이드.md
+++ b/스파크 완벽 가이드.md
@@ -469,3 +469,23 @@
 ## 8.11 조인 사용 시 문제점
 ### 8.11.1 복합 데이터 타입의 조인
 - 불리언을 반환하는 모든 표현식은 조인 표현식으로 간주할 수 있음
+
+### 8.11.2 중복 컬럼명 처리
+- 문제 상황
+  - 조인에 사용할 데이터프레임의 특정 키가 동일한 이름을 가지며, 키가 제거되지 않도록 조인 표현식에 명시하는 경우
+  - 조인 대상이 아닌 두 개의 컬럼이 동일한 이름을 가진 경우
+- 해결 방법
+1. 다른 조인 표현식 사용
+   - 동일한 이름을 가진 두 개의 키를 사용한다면 불리언 형태의 조인 표현식을 문자열이나 시퀀스 형태로 바꾸는 것
+2. 조인 후 컬럼 제거
+   - 이 방법은 스파크 SQL 분석 프로세스의 특성을 활용
+   - 명시적으로 참조된 컬럼을 검증할 필요가 없으므로 스파크 코드 분석 단계를 통과함
+3. 조인 전 컬럼명 변경
+
+## 8.12 스파크의 조인 수행 방식
+### 8.12.1 네트워크 통신 전략
+- 스파크는 조인 시 두가지 클러스터 통신 방식을 활용
+  - 셔플조인: 전체 노드 간 통신 유발
+  - 브로드캐스트 조인: 전체 노드 간 통신을 유방하지는 않음
+- 큰 테이블과 큰 테이블 조인
+  - 
