--- a/스파크 완벽 가이드.md
+++ b/스파크 완벽 가이드.md
@@ -488,4 +488,19 @@
   - 셔플조인: 전체 노드 간 통신 유발
   - 브로드캐스트 조인: 전체 노드 간 통신을 유방하지는 않음
 - 큰 테이블과 큰 테이블 조인
-  - 
+  - 셔플 조인 발생 -> 셔플 조인은 전체 노드 간 통신 발생, 조인에 사용한 특정 키나 집합을 어떤 노드가 가졌는지에 따라 해당 노드와 데이터를 공유
+  - 이런 통신 방식 때문에 네트워크는 복잡해지고 많은 자원을 사용, 특히 데이터가 잘 나뉘어져 있지 않다면 더 심해짐
+- 전체 조인 프로세스가 진행되는 동안 모든 워커노드에서 통신이 발생함
+- 큰 테이블과 작은 테이블 조인
+  - 테이블이 단일 워커 노드의 메모리 크기에 적합할 정도로 충분히 작은 경우 조인 연산 최적화 가능
+  - 브로드캐스트 조인이 효율적 -> 브로트캐스트 조인은 작은 데이터프레임을 클러스터의 전체 워커노드에 복제하는 것을 의미
+  - 이렇게하면 자원을 많이 사용할 것처럼 보이지만 조인 프로세스 내내 전체 노드가 통신하는 현상을 방지할 수 있음
+  - 시작 시 단 한번만 복제가 수행되며 그 이후로는 개별 워커가 다른 워커노드를 기다리거나 통신할 필요 없이 수행 가능
+  - 브로드캐스트 조인도 대규모 노드 간 통신이 발생하지만 그 이후로는 노드 사이에 추가적인 통신이 발생하지 않음
+  - 따라서 모든 단일 노드에서 개별적으로 조인이 수행되므로 CPU가 가장 큰 병복 구간이 됨
+  - 데이터프레임 API를 사용하면 옵티마이저에서 브로드캐스트 조인을 사용할 수 있도록 힌트를 줄 수 있음
+  - 힌트를 주는 방법은 브로드캐스트 함수에 작은 크기의 데이터프레임을 인수로 전달
+  - SQL 역시 조인 수행에 필요한 힌트를 줄 수 있지만 강제성이 없으므로 옵티마이저가 무시할수도 있음
+  - 단점: 너무 큰 데이터를 브로드캐스트하면 고비용의 수집 연산이 발생하므로 드라이버 노드가 비정상적으로 종료될 수도 있음
+- 아주 작은 테이블 사이의 조인
+  - 스파크가 조인 방식을 경정하도록 내버려두는 것이 좋음
