--- a/스파크 완벽 가이드.md
+++ b/스파크 완벽 가이드.md
@@ -504,3 +504,33 @@
   - 단점: 너무 큰 데이터를 브로드캐스트하면 고비용의 수집 연산이 발생하므로 드라이버 노드가 비정상적으로 종료될 수도 있음
 - 아주 작은 테이블 사이의 조인
   - 스파크가 조인 방식을 경정하도록 내버려두는 것이 좋음
+
+
+# 9장 데이터소스
+### 9.1.2 데이터 읽기의 기초
+- 읽기모드: 스파크가 형식에 맞지 않는 데이터를 만났을 때 동작 방식을 지정하는 옵션
+  - permissive(기본값): 오류 레코드의 모든 필드를 null로 설정하고 모든 오류 레코드를 _corrupt_record라는 문자열 컬럼에 기록
+  - dropMalformed: 형식에 맞지 않는 레코드가 포함된 로우 제거
+  - failFast: 형식에 맞지 않는 레코드를 만나면 즉시 종료
+
+### 9.1.3 쓰기 API 구조
+- partitionBy, bucketBy, sortBy 메서드는 파일 기반 데이터소스에서만 동작, 이 기능으로 최종 파일 배치 형태 제어 가능
+
+### 9.1.4 데이터 쓰기의 기초
+- 저장모드: 스파크가 지정된 위치에서 동일한 파일을 발견했을 때의 동작 방식을 지정하는 옵션
+  - append: 해당 경로에 이미 존재하는 파일 목록에 결과 파일 추가
+  - overwrite: 이미 존재하는 모든 데이터를 완전히 덮어 씀
+  - errorIfExists(기본값): 해당 경로에 데이터나 파일이 존재하는 경우 오류를 발생시키면서 쓰기 작업이 실패함
+  - ignore: 해당 경로에 데이터나 파일이 존재하는 경우 아무런 처리도 하지 않음
+
+### 9.2.2 CSV 파일 읽기
+- 스파크는 지연 연산 특성이 있으므로 데이터프레임 정의 시점이 아닌 잡 실행 시점에만 오류가 발생
+- ex. 데이터프레임을 정의하는 시점에는 존재하지 않는 파일을 지정하도 오류가 발생하지 않음
+
+## 9.4 파케이 파일
+- 분석 워크로드에 최적화
+- 저장소 공간 절약, 전체 파일을 읽는 대신 개별 컬럼을 읽을 수 있음, 컬럼 기반 압축 기능 제공
+- 스파크와 호환이 잘 되어 스파크 기본 파일 포맷
+- 파케이 파일은 읽기 연산 시 JSON, CSV보다 훨씬 효율적으로 동작하므로 장기 저장용 데이터는 파케이 포맷으로 저장하는 것이 좋음
+- 복합 데이터 타입 지원 -> 컬럼이 배열, 맵, 구조체 데이터 타입이어도 문제 없음
+- cf. CSV에서는 배열을 사용할 수 없음
