--- a/스파크 완벽 가이드.md
+++ b/스파크 완벽 가이드.md
@@ -534,3 +534,31 @@
 - 파케이 파일은 읽기 연산 시 JSON, CSV보다 훨씬 효율적으로 동작하므로 장기 저장용 데이터는 파케이 포맷으로 저장하는 것이 좋음
 - 복합 데이터 타입 지원 -> 컬럼이 배열, 맵, 구조체 데이터 타입이어도 문제 없음
 - cf. CSV에서는 배열을 사용할 수 없음
+
+### 9.6.2 쿼리 푸시다운
+- 스파크는 데이터프레임을 만들기 전 데이터베이스 자체에서 데이터를 필터랑하도록 만들 수 있음
+- ex. 데이터프레임에 필터를 명시하면 스파크는 해당 필터에 대한 처리를 데이터베이스로 위임(push down)함
+- 데이터베이스 병렬로 읽기
+  - numPartitions 옵션을 이용해서 읽기, 쓰기 동시 작업 수를 제한할 수 있는 최대 파티션 수를 설정할 수 있음
+- 슬라이딩 윈도우 기반 파티셔닝
+  - 조건절을 기반으로 분할할 수 있는 방법
+
+## 9.8 고급 I/O 개념
+- 쓰기 작업 전에 파티션 수를 조절하여 병렬로 처리할 파일 수 제어 가능
+- 버켓팅과 파티셔닝을 조합하여 데이터 저장 구조 제어 가능
+
+### 9.8.1 분할 가능한 파일 타입과 압축 방식
+- HDFS를 사용하면 분할된 파일을 여러 블록으로 나누어 분산 저장하기 때문에 더 최적화될 수 있음
+- 추천 파일 포맷은 파케이, 압축 방식은 파일 포맷과 GZIP
+
+### 9.8.2 병렬로 데이터 읽기
+- 다수의 파일이 존재하는 폴더를 읽을 때 폴더의 개별 파일은 데이터프레임의 파티션이 됨
+- 사용가능한 익스큐터를 이용해 병렬로 파일을 읽음
+
+### 9.8.3 병렬로 데이터 쓰기
+- 데이터를 쓰는 시점에 데이터프레임이 가진 파티션 수에 따라 달라질 수 있음
+- 기본적으로 데이터 파티션 당 하나의 파일이 작성됨
+- 옵션에 지정된 파일명은 실제로 다수의 파일을 가진 디렉터리
+- 그 디렉터리 안에 파티션 당 하나의 파일로 데이터 저장
+- 파티셔닝
+  - 어떤 데이터를 어디에 저장할 것인지 제어할 수 있는 기능
